{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 13,
  "lineage": "d8a239fc-e592-746b-8cda-7fda4bc49926",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "spoke_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/17438cdb-013f-4b62-96d2-d88cc6121732/resourceGroups/rg-spoke/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke",
            "location": "eastus",
            "name": "nsg-spoke",
            "resource_group_name": "rg-spoke",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.spoke_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_hub_to_spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.1.0.0/16",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/17438cdb-013f-4b62-96d2-d88cc6121732/resourceGroups/rg-spoke/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke/securityRules/allow-hub-to-spoke",
            "name": "allow-hub-to-spoke",
            "network_security_group_name": "nsg-spoke",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "rg-spoke",
            "source_address_prefix": "10.0.0.0/16",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.spoke_nsg",
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_rg",
            "azurerm_virtual_network.hub_vnet",
            "azurerm_virtual_network.spoke_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/17438cdb-013f-4b62-96d2-d88cc6121732/resourceGroups/rg-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/snet-app",
            "name": "snet-app",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-spoke",
            "virtual_network_name": "vnet-spoke"
          },
          "dependencies": [
            "azurerm_resource_group.spoke_rg",
            "azurerm_virtual_network.spoke_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewall_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/17438cdb-013f-4b62-96d2-d88cc6121732/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/snet-firewall",
            "name": "snet-firewall",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gateway_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/17438cdb-013f-4b62-96d2-d88cc6121732/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "spoke_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/17438cdb-013f-4b62-96d2-d88cc6121732/resourceGroups/rg-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/snet-app",
            "network_security_group_id": "/subscriptions/17438cdb-013f-4b62-96d2-d88cc6121732/resourceGroups/rg-spoke/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke",
            "subnet_id": "/subscriptions/17438cdb-013f-4b62-96d2-d88cc6121732/resourceGroups/rg-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke/subnets/snet-app"
          },
          "dependencies": [
            "azurerm_network_security_group.spoke_nsg",
            "azurerm_resource_group.spoke_rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.spoke_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e1a9785d-85fa-42ad-9a73-8586edb9d7b0",
            "id": "/subscriptions/17438cdb-013f-4b62-96d2-d88cc6121732/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "location": "eastus",
            "name": "vnet-hub",
            "resource_group_name": "rg-hub"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "475534e5-1c43-41c2-a7af-06e412962689",
            "id": "/subscriptions/17438cdb-013f-4b62-96d2-d88cc6121732/resourceGroups/rg-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke",
            "location": "eastus",
            "name": "vnet-spoke",
            "resource_group_name": "rg-spoke"
          },
          "dependencies": [
            "azurerm_resource_group.spoke_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub_to_spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/17438cdb-013f-4b62-96d2-d88cc6121732/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub/virtualNetworkPeerings/peer-hub-to-spoke",
            "name": "peer-hub-to-spoke",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/17438cdb-013f-4b62-96d2-d88cc6121732/resourceGroups/rg-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke",
            "resource_group_name": "rg-hub",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_rg",
            "azurerm_virtual_network.hub_vnet",
            "azurerm_virtual_network.spoke_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/17438cdb-013f-4b62-96d2-d88cc6121732/resourceGroups/rg-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke/virtualNetworkPeerings/peer-spoke-to-hub",
            "name": "peer-spoke-to-hub",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/17438cdb-013f-4b62-96d2-d88cc6121732/resourceGroups/rg-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "resource_group_name": "rg-spoke",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-spoke"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_rg",
            "azurerm_virtual_network.hub_vnet",
            "azurerm_virtual_network.spoke_vnet"
          ]
        }
      ]
    }
  ]
}